# solograph

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.search  Makefile  README.md  pyproject.toml
docs/: ph-pipeline.md
scripts/: build_ph_graph.py  enrich-linkedin.py  ph-pipeline.sh
src/codegraph_mcp/: __init__.py  __main__.py  cli.py  db.py  kb.py  models.py  registry.py  search_server.py  server.py  watcher.py
src/codegraph_mcp/indexers/: __init__.py  producthunt.py  trustmrr.py  youtube.py
src/codegraph_mcp/output/: __init__.py  console.py  explain.py  mermaid.py  repomap.py
src/codegraph_mcp/query/: __init__.py  search.py
src/codegraph_mcp/scanner/: __init__.py  code.py  deps.py  git.py  registry.py  sessions.py
src/codegraph_mcp/scrapers/: __init__.py  base.py  producthunt.py  producthunt_browser.py  producthunt_makers.py  trustmrr.py
src/codegraph_mcp/vectors/: __init__.py  common.py  project_graph_index.py  project_index.py  session_index.py  source_index.py
