[project]
name = "solograph"
version = "0.2.3"
description = "Code intelligence MCP server — multi-project code graph, semantic search, session history, knowledge base, web search"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Rustam Salavatov" },
]
keywords = ["mcp", "code-intelligence", "codegraph", "semantic-search", "claude-code", "solograph"]
dependencies = [
    # Graph Database + Vector Search
    "falkordblite>=0.4",
    # Embeddings
    "sentence-transformers>=5.2.2",
    "semantic-text-splitter>=0.29.0",
    # Code Analysis
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.23",
    "tree-sitter-swift>=0.0.1",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-kotlin>=1.0",
    "tree-sitter-rust>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-ruby>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    # Schema & Config
    "pydantic>=2.12.5",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1.0",
    # CLI & Output
    "click>=8.1",
    "rich>=13.0.0",
    # MCP
    "mcp>=1.26.0",
    # HTTP (web search)
    "httpx>=0.28.1",
]

[project.optional-dependencies]
mlx = ["mlx-embeddings>=0.0.3"]
dev = ["pre-commit>=4.5.1"]

[project.urls]
Homepage = "https://github.com/fortunto2/solograph"
Repository = "https://github.com/fortunto2/solograph"
"Solo Factory Plugin" = "https://github.com/fortunto2/solo-factory"

[project.scripts]
solograph = "codegraph_mcp.server:main"
solograph-cli = "codegraph_mcp.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codegraph_mcp"]

# --- Linting & Formatting ---

[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM105", # contextlib.suppress — try/except/pass is clearer for DB index creation
    "SIM108", # use ternary (readability preference)
    "SIM102", # nested if — often more readable than combined conditions
    "SIM113", # enumerate for counter — false positive when counter is a loop limiter
    "B904",   # raise from — not critical for CLI SystemExit
    "B905",   # zip without strict= (py3.10+)
]

[tool.ruff.lint.isort]
known-first-party = ["codegraph_mcp"]
